@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-13T08:00:37Z",
+  "timestamp" : "2024-01-14T16:00:39Z",
   "count_outdated" : 66,
   "uniques_outdated" : 49,
-  "count" : 72,
-  "uniques" : 55,
+  "count" : 73,
+  "uniques" : 56,
   "clones" : [
     {
       "timestamp": "2024-01-04T00:00:00Z",
@@ -34,6 +34,15 @@
     },
     {
       "timestamp": "2024-01-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-14T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
